  .
  No dummys were harmed during the making of this feature
- downloaded fonts for MKWiimm are now prefixed mkwiimm_font_
- downloaded items for MKWiimm are now prefixed mkwiimm_item_
- add support for SMN?41 (Devil Mario Winter Special)
- add support for SMN?31 (New Super Mario Bros. Wii - Other World)
- add MKWIIMM_OVERRIDE_SZS variable to patchimage.rc
  if set to TRUE patchimage will override the supplied SZS tools
  of the MKWiimm patcher with it's own version of the tools.
  .
  This is useful when the supplied ones don't work with your system's
  libpng (usually this happens on Debian GNU/Linux).
  .
  If patching anything older than RMCP23 (pre-wiimmfi versions) the tools
  will always be overriden (because they are ancient).

v5.3.0:
- update wit to 2.30a
- update szs to 1.36b
- update link for MKWiimm 2014-01 to v2
- update link for MKWiimm 2014-02 to v3
- update link for MKWiimm 2014-04 to v4
- add support for MKWiimm 2014-11
- fixed bug that ${MKWIIMM_GAME_LANG} from ${HOME}/.patchimage.rc
  is not honoured
- only apply wiimmfi patcher for pre 2014 MKWiimm (starting with
  2014 the supplied patcher supports wiimmfi out-of-the-box)
- add support for SMN?YL: Luigi's Super Yoshi Bros.
- add support for SMN?FL: Newer: Falling Leaf

v5.2.0:
- add support for SMN?MI (Midi's Super Mario Wii - Just A Little
  adventure)
- add support for SMN?DU DarkUmbra SMB Anniversary Edition
- add support for SMN?ZA Newer Apocalypse
- add exit code 81 (hack does not support supplied game version)

v5.1.0:
- remove MKWIIMM_GAME_LANG from patchimage.rc (sets the language
  for the patcher only, so not required at all) Thanks @Leseratte
  for the hint.
- fixup debian packaging scripts
- add exit code 69 (wiimmfi failed) and 75 (wrong user-input)
- proper error-code providing and exiting in mario kart wiimm,
  mario kart wiimm font, mario kart wiimm items, wiimmfi mario
  kart and wiimmfi generic modules

v5.0.1:
- fix bug in mario kart wiimm items (did not properly work)
